--- a/mainmatter/3-Methodology/images/dense.tex
+++ b/mainmatter/3-Methodology/images/dense.tex
@@ -1,8 +1,7 @@
 \begin{figure}[H]
     \centering
     % \includegraphics[width=.5\linewidth]{mainmatter/3-Methodology/images/dense.png}
-    
-  
+    \captionsetup{justification=centering,margin=2cm}
 
 \begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=2.8cm,
     semithick]
@@ -43,6 +42,8 @@
 \end{tikzpicture}
 
   
-\caption{Dense Layer}
+\caption[Dense Layer]{
+    The input nodes are represented by \textit{x} and the weights \textit{h} are applied to each values of input nodes to generate an output
+}
 \label{fig:dense}
 \end{figure}
