--- a/tips.tex
+++ b/tips.tex
@@ -10,17 +10,17 @@
 \end{figure}
 
 
-% Subfigure
+% subfloat
 
 \begin{figure}[tb]
 	\centering
-	\subfigure[A horrible one.]{
+	\subfloat[A horrible one.]{
 		\label{fig:fig2sub1}
         \includegraphics[width=0.5\linewidth]{introduction/fig/figure1.jpg}}
-	\subfigure[A proper one.]{
+	\subfloat[A proper one.]{
 		\label{fig:fig2sub2}
 		\includegraphics[width=0.6\linewidth]{introduction/fig/figure2.pdf}}
-	\caption{A figure with two subfigures.}
+	\caption{A figure with two subfloats.}
 	\label{fig:fig2}
 \end{figure}
 
