--- a/mainmatter/1-Introduction/introduction.tex
+++ b/mainmatter/1-Introduction/introduction.tex
@@ -45,7 +45,7 @@ The simple technique of encoding the sequence information of drugs and proteins 
 
 \subsection{Selection of Prediction Score}
 
-Out of the many score functions; STITCH, Davis, Metz\_Anastassiadis and KIBA scores, KIBA scores are used for the prediction of drug and protein interaction problem. The main reasons as found in \cite[Tang et al.]{Tang2013} being: STITCH scores don't fully explore the primary thermodynamic dissociation constants used for drug-target interaction profile and other scores are used by KIBA.  Again, KIBA scores database consists of experimental data and secondary data (from literature) of drug-target interaction. Choosing the KIBA as the output score for two protein and drug sequences, we model our machine learning algorithm for prediction of interaction.
+Out of the many score functions; STITCH, Davis, Metz\_Anastassiadis and KIBA scores, KIBA scores are used for the prediction of drug and protein interaction problem. The main reasons being: STITCH scores don't fully explore the primary thermodynamic dissociation constants used for drug-target interaction profile and other scores are used by KIBA~\cite{Tang2013}.  Again, KIBA scores database consists of experimental data and secondary data (from literature) of drug-target interaction. Choosing the KIBA as the output score for two protein and drug sequences, we model our machine learning algorithm for prediction of interaction.
 
 \subsection{Selection of Features}
 
