--- a/backmatter/appendix/appendix.tex
+++ b/backmatter/appendix/appendix.tex
@@ -9,7 +9,7 @@
         \fi \caption[]{R2RSRV Matrix}
         \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
             \hline
-            &I&V&L&F&C&M&A&G&T&S&W&Y&P&H&E&Q&D&N&K&R\\ \hline
+            &I&V&L&F&C&M&A&G&T&S&W&Y&P&H&E&Q&D&N&K&R\\ \toprule \hline
             I&5.21&2.42&0.88&1.71&-1.59&1.13&0.95&0.48&-1.05&-3.20&0.65&1.44&-0.82&-1.54&-0.94&-0.62&-1.66&-3.14&-2.23&-2.14\\ \hline
             V&2.42&9.46&1.33&0.49&-0.32&0.54&1.55&-2.12&-0.91&-1.80&-2.88&-1.05&-0.81&-1.32&-0.29&-0.58&-2.39&-3.69&0.66&-1.42\\ \hline
             L&0.88&1.33&9.90&1.08&-0.42&2.17&2.41&-2.29&-3.40&-2.32&0.48&-0.77&-2.28&1.67&-0.77&-0.08&-3.49&-2.16&-2.10&0.19\\ \hline
