--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -24,7 +24,7 @@
 \newacronym{kiba}{KIBA}{Kinase Inhibitor Bioactivity}
 \newacronym{pssm}{PSSM}{Position Specific Scoring Matrix}
 \newacronym{srv}{R2RSRV}{Residue Residue Statistical Residual Vector}
-\newacronym{lstm}{LSTM}{Long Short Term Memor}
+\newacronym{lstm}{LSTM}{Long Short Term Memory}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{pssmdt}{PSSM-DT}{Position Specific Scoring Matrix Distance Transformation}
 \newacronym{edt}{EDT}{Evolutionary Distance Transformation}
@@ -36,3 +36,4 @@
 \newacronym{qsar}{QSAR}{Quantitative Structure Activity Relation}
 \newacronym{rnn}{RNN}{Recursive Neural Network}
 \newacronym{et}{ET}{Evolutionary Transformation}
+\newacronym{featdti}{FeatDTI}{Feature Based Drug Target Interaction}
