--- a/configs.tex
+++ b/configs.tex
@@ -142,3 +142,5 @@
 \captionsetup[table]{position=top}
 \captionsetup[subfloat]{position=bottom}
 \captionsetup[figure]{position=bottom}
+
+% \usepackage[backend=bibtex]{biblatex}
