--- a/mainmatter/3-Methodology/sections/deepnet.tex
+++ b/mainmatter/3-Methodology/sections/deepnet.tex
@@ -1,7 +1,7 @@
 
   \section{Deep Learning Model}
   
-  The Features formed from data processing block are then subjected to deep learning model. The implementation is done using  using keras library in python. The implemented model is represented by Figure ~\ref{fig:dlm}. The input layers are described in Table ~\ref{table:inputs}.
+  The Features formed from data processing block are then subjected to deep learning model. The implementation is done using  using keras library in python. The implemented model is represented by Figure ~\ref{fig:dlm}. The input layers are described in table ~\ref{table:inputs}.
   
   \begin{figure}[H]
   \centering
@@ -34,6 +34,13 @@
     \includegraphics[width=.8\linewidth]{mainmatter/3-Methodology/images/cnn.png}
     \caption{Convolutional Neural Network}
     \label{fig:cnn}
+  \end{figure} 
+
+  \begin{figure}
+    \centering
+    \includegraphics[width=.5\linewidth]{mainmatter/3-Methodology/images/System-Block-CNN-Layer.pdf}
+    \caption{Working of CNN Block}
+    \label{fig:cnn-2}
   \end{figure}
   
   \subsubsection{Dense Layer}
