--- a/bibliography/__latexindent_temp.tex
+++ b/bibliography/__latexindent_temp.tex
@@ -1,10 +1,19 @@
-@article{ozturk2018deepdta,
-  title={DeepDTA: deep drug--target binding affinity prediction},
-  author={{\"O}zt{\"u}rk, Hakime and {\"O}zg{\"u}r, Arzucan and Ozkirimli, Elif},
-  journal={Bioinformatics},
-  volume={34},
-  number={17},
-  pages={i821--i829},
-  year={2018},
-  publisher={Oxford University Press}
+@article{Ozturk2018,
+abstract = {The identification of novel drug-target (DT) interactions is a substantial part of the drug discovery process. Most of the computational methods that have been proposed to predict DT interactions have focused on binary classification, where the goal is to determine whether a DT pair interacts or not. However, protein-ligand interactions assume a continuum of binding strength values, also called binding affinity and predicting this value still remains a challenge. The increase in the affinity data available in DT knowledge-bases allows the use of advanced learning techniques such as deep learning architectures in the prediction of binding affinities. In this study, we propose a deep-learning based model that uses only sequence information of both targets and drugs to predict DT interaction binding affinities. The few studies that focus on DT binding affinity prediction use either 3D structures of protein-ligand complexes or 2D features of compounds. One novel approach used in this work is the modeling of protein sequences and compound 1D representations with convolutional neural networks (CNNs). The results show that the proposed deep learning based model that uses the 1D representations of targets and drugs is an effective approach for drug target binding affinity prediction. The model in which high-level representations of a drug and a target are constructed via CNNs achieved the best Concordance Index (CI) performance in one of our larger benchmark data sets, outperforming the KronRLS algorithm and SimBoost, a state-of-the-art method for DT binding affinity prediction.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1801.10193v2},
+author = {{\"{O}}zt{\"{u}}rk, Hakime and {\"{O}}zg{\"{u}}r, Arzucan and Ozkirimli, Elif},
+doi = {10.1093/bioinformatics/bty593},
+eprint = {arXiv:1801.10193v2},
+file = {:Users/anupadkh/Downloads/1801.10193v2.pdf:pdf},
+issn = {1367-4803},
+journal = {Bioinformatics},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction/Code{\_}Papers},
+month = {sep},
+number = {17},
+pages = {i821--i829},
+title = {{DeepDTA: deep drug–target binding affinity prediction}},
+url = {https://academic.oup.com/bioinformatics/article/34/17/i821/5093245},
+volume = {34},
+year = {2018}
 }
