--- a/main.tex
+++ b/main.tex
@@ -28,8 +28,8 @@
 \author{Anup Adhikari}
 \date{2019}
 
-\title{Protein Drug Interaction from their sequence}
-\newcommand{\mysubtitle}{Using the SMILES and SEQUENCE information}
+\title{Protein Drug Interaction from their sequence:Using SMILES and FASTA }
+\newcommand{\mysubtitle}{}
 \newcommand{\mygrade}{Electrical Engineering}
 \newcommand{\myuniversity}{Tribhuwan University}
 \newcommand{\myinstitute}{Institute of Engineering}
